--- a/example/package.json
+++ b/example/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-gesture-handler": "^2.18.1",
+    "react-native-reanimated": "^3.15.0",
+    "react-native-safe-area-context": "^4.10.9",
+    "react-native-svg": "^15.6.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
