--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-interactive-tutorial",
-  "version": "0.1.0",
-  "description": "Interactive tutorial with step by step guide",
+  "version": "0.0.1",
+  "description": "Interactive tutorial with step-by-step guide",
   "source": "./src/index.tsx",
   "main": "./lib/commonjs/index.js",
   "module": "./lib/module/index.js",
@@ -47,7 +47,10 @@
   "keywords": [
     "react-native",
     "ios",
-    "android"
+    "android",
+    "web",
+    "tutorial",
+    "walkthrough"
   ],
   "repository": {
     "type": "git",
@@ -62,12 +65,18 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
+  "dependencies": {
+    "lodash": "^4.17.21",
+    "nanoid": "^5.0.7",
+    "react-native-redash": "^18.1.3"
+  },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.2",
     "@evilmartians/lefthook": "^1.5.0",
     "@react-native/eslint-config": "^0.73.1",
     "@release-it/conventional-changelog": "^5.0.0",
     "@types/jest": "^29.5.5",
+    "@types/lodash": "^4.17.7",
     "@types/react": "^18.2.44",
     "commitlint": "^17.0.2",
     "del-cli": "^5.1.0",
@@ -79,15 +88,23 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-builder-bob": "^0.30.0",
+    "react-native-gesture-handler": "^2.18.1",
+    "react-native-reanimated": "^3.15.0",
+    "react-native-safe-area-context": "^4.10.9",
+    "react-native-svg": "^15.6.0",
     "release-it": "^15.0.0",
     "typescript": "^5.2.2"
   },
-  "resolutions": {
-    "@types/react": "^18.2.44"
-  },
   "peerDependencies": {
     "react": "*",
-    "react-native": "*"
+    "react-native": "*",
+    "react-native-gesture-handler": "*",
+    "react-native-reanimated": "*",
+    "react-native-safe-area-context": "*",
+    "react-native-svg": "*"
+  },
+  "resolutions": {
+    "@types/react": "^18.2.44"
   },
   "workspaces": [
     "example"
